<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRootRegistration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.gripxtech.kasimrangwala.grophers.fragments.RegistrationFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegisterFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="@string/register_first_name"
                    android:inputType="textCapWords"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegisterLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="@string/register_last_name"
                    android:inputType="textCapWords"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegisterMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:hint="@string/login_mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegisterPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegisterConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                    android:hint="@string/register_confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etRegisterCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_city_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_location_city_black_24dp"
                    android:hint="@string/register_country"
                    android:inputType="none"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etRegisterState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_city_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_location_city_black_24dp"
                    android:hint="@string/register_state"
                    android:inputType="none"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etRegisterCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_city_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_location_city_black_24dp"
                    android:hint="@string/register_city"
                    android:inputType="none"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:enabled="false"
                android:minHeight="?attr/actionBarSize"
                android:text="@string/title_register_fragment"
                android:textColor="@color/icons"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

