<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRootProductDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:context="com.gripxtech.kasimrangwala.grophers.fragments.ProductDetailFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsvProductDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/ivProductDetailHeader"
                    android:layout_width="match_parent"
                    android:layout_height="288dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/ivProductDetailLogo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:visibility="gone" />

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvProductDetailName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        <android.support.v7.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/tvProductDetailDeliveryBy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginRight="8dp"
                                android:text="@string/delivery_by" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/tvProductDetailDeliveryTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorAccent" />

                        </android.support.v7.widget.LinearLayoutCompat>

                        <android.support.v7.widget.LinearLayoutCompat
                            android:id="@+id/llProductCart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginRight="8dp"
                                android:text="@string/select_quantity"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <android.support.v7.widget.AppCompatImageView
                                android:id="@+id/ivProductDetailRemoveFromCart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:src="@drawable/ic_remove_circle_outline_black_36dp" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/tvProductDetailCartCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/one"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <android.support.v7.widget.AppCompatImageView
                                android:id="@+id/ivProductDetailAddToCart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:src="@drawable/ic_add_circle_outline_black_36dp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/bnProductDetailAddToCart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_local_grocery_store_white_24dp"
                                android:drawablePadding="4dp"
                                android:drawableStart="@drawable/ic_local_grocery_store_white_24dp"
                                android:text="@string/add_to_cart"
                                android:textColor="@color/icons" />

                        </android.support.v7.widget.LinearLayoutCompat>

                        <WebView
                            android:id="@+id/wvProductDetailDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.v7.widget.LinearLayoutCompat>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
